kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    # Utilisez les annotations nécessaires pour votre ingress controller spécifique
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "vote.dogswillwin.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote
                port:
                  number: 80
